# PartitionSchemeDetector

./: CMakeLists.txt  README.md  app.cpp
